# aoc_2024_cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
day_1/: CMakeLists.txt  day_1.org  distance.cpp  distance.hpp  distance_main.cpp  distance_test.cpp  similarity.cpp  similarity.hpp  similarity_main.cpp  similarity_test.cpp
day_10/: CMakeLists.txt  day_10.cpp  day_10.org  day_10_draft
day_11/: CMakeLists.txt  day11.cpp  day11.org
day_12/: CMakeLists.txt  day12.cpp  day12.org
day_13/: CMakeLists.txt  day13.org  day_13.cpp
day_14/: CMakeLists.txt  day_14.cpp  day_14.org
day_15/: CMakeLists.txt  day_15.cpp  day_15.org
day_16/: CMakeLists.txt  day16.org  day_16.cpp
day_17/: CMakeLists.txt  day_17.cpp  day_17.org
day_18/: CMakeLists.txt  day18.org  day_18.cpp  input  sample
day_19/: CMakeLists.txt  day19.org  day_19.cpp
day_2/: CMakeLists.txt  day2.cpp  day2.org
day_20/: CMakeLists.txt  day20.org  day_20.cpp  test1
day_21/: CMakeLists.txt  day21.org  day_21.cpp  find_path.cpp
day_22/: CMakeLists.txt  day22.org  day_22.cpp  scratch.lisp
day_23/: CMakeLists.txt  day23.org  day_23.cpp
day_24/: CMakeLists.txt  day24.org  day_24.cpp  day_24_v2.cpp  input_fix_1  input_fix_2  input_fix_3  input_fix_4
day_25/: CMakeLists.txt  day_25.cpp  day_25.org
day_3/: CMakeLists.txt  day3.cpp  day3.org
day_4/: CMakeLists.txt  day4.cpp  day4.org
day_5/: CMakeLists.txt  day_5.cpp  day_5.org
day_6/: CMakeLists.txt  day_6.cpp  day_6.org
day_7/: CMakeLists.txt  day_7.cpp  day_7.org
day_8/: CMakeLists.txt  day_8.cpp  day_8.org
day_9/: CMakeLists.txt  day_9.cpp  day_9.org
